--- a/SpinConference/SpinConference.tex
+++ b/SpinConference/SpinConference.tex
@@ -842,7 +842,7 @@ Then the fact that $\varphi$ is an $\End(V)$-module homomorphism implies that gi
 $$\varphi^j_i(Mv) = M \varphi_i^j(v)$$
 so all the $\varphi^j_i$ commute with every $M$ in $\End(V)$. In particular, this implies that they are all scalar matrices, since $\End(V)$ is central. Therefore, the data of an $\End(V)$-module homomorphism is equivalent to the choice of $nm$ scalars, so $\hom_{\End(V)}(V^{\oplus n}, V^{\oplus m}) \cong \R^{nm}$ as vector spaces.
 \end{proof}
-This motivates us to suggest that the category $\mathscr{C}$ that we are looking for is the subcategory of $\mathsf{Vect}_\R$ where the objects are the vector spaces $\R^n$ and the maps are linear maps $\R^n \to \R^m$ (i.e. matrices). We claim the assignment $\mathcal{F} : _{\End(V)}\mathsf{Mod} \to \mathscr{C}$ where $\mathcal{F}(V^{\oplus n}) = \R^n$ and $\mathscr{F}(\varphi)$ is the matrix $\varphi_i^j$ of scalars (as specified above) corresponding to $\varphi$ defines a functor.
+This motivates us to suggest that the category $\mathscr{C}$ that we are looking for is the subcategory of $\mathsf{Vect}_\R$ where the objects are the vector spaces $\R^n$ and the maps are linear maps $\R^n \to \R^m$ (i.e. matrices). We claim the assignment $\mathcal{F} : _{\End(V)}\mathsf{Mod} \to \mathscr{C}$ where $\mathcal{F}(V^{\oplus n}) = \R^n$ and $\mathcal{F}(\varphi)$ is the matrix $\varphi_i^j$ of scalars (as specified above) corresponding to $\varphi$ defines a functor. We note that the composition of such maps is essentially matrix multiplication, since each function $\varphi_i^j$ gives the scalar for a map from the $i^{th}$ factor to the $j^{th}$ factor of the direct sum, so after composing two maps $\varphi : V^{\oplus n} \to V^{\oplus m}$ and $\psi : V^{\oplus m} \to V^{\oplus \ell}$, we have that the scalar for the map from the $i^{th}$ factor of $V^{\oplus n}$ to the $j^{th}$ factor of $V^{\oplus \ell}$ is the sum over $k$ of the products of scalars for maps of the $i^{th}$ factor of $V^{\oplus n}$ into the $k^{th}$ factor of $V^{\oplus m}$ with the scalar for the map of the $k^{th}$ factor into the $j^{th}$ factor of $V^{\oplus \ell}$, which is exactly the matrix product.
 %
 \begin{exer}
 Let $V$ be a $4$-dimensional $\C$-vector space, and $\omega \in \bigwedge^4 V^*$ a volume form (i.e. $\omega \neq 0$). Then we have the group $\Aut(V,\omega)$ of linear automorphisms of $V$ preserving $\omega$, which is equivalent to the induced maps on $\bigwedge^4V^*$ being identity. Identify this group.
@@ -859,10 +859,17 @@ where the first map is the mapping $(\alpha,\beta) \mapsto \alpha \wedge \beta$.
 %
 We note the since $V$ is $4$-dimensional, $\bigwedge^4 V$ is $4$-dimensional, and consists of scalar multiples of 
 $$\eta = v_1 \wedge v_2 \wedge v_3 \wedge v_4$$
-for a basis $\set{v_i}$ for $V$. Therefore, for $\alpha,\beta \in \bigwedge^2V$ we have that $\alpha \wedge \beta = \lambda \eta$. We can say that this is just $\alpha \wedge \beta = \lambda v_1 \wedge v_2 \wedge v_3 \wedge v_4$, and then let $B(\alpha, \beta) = \omega(\lambda v_1, v_2, v_3, v_4)$. Then since $\omega$ is multilinear, this is independent 
+for a basis $\set{v_i}$ for $V$. Therefore, for $\alpha,\beta \in \bigwedge^2V$ we have that $\alpha \wedge \beta = \lambda \eta$. We can say that this is just $\alpha \wedge \beta = \lambda v_1 \wedge v_2 \wedge v_3 \wedge v_4$, and then let $B(\alpha, \beta) = \omega(\lambda v_1, v_2, v_3, v_4)$. Then since $\omega$ is multilinear and the wedge product is bilinear, this is independent of how we chose to scale the $v_i$. In addition, this is independent of our choice of basis $\set{v_i}$, since it we fixed another basis $\set{b_i}$ the wedge $b_1 \wedge b_2 \wedge b_3 \wedge b_3$ is just the determinant of the change of basis matrix multiplied with $\eta$. Then the scalar you get for $\alpha \wedge \beta$ will be the reciprocal of this determinant, but since $\omega$ is multilinear, $\omega(b_1, b_2, b_3, b_3)$ also scales by the determinant, so the value remains the same.
+
+ We then note that $\alpha \wedge \beta = (-1)^{|\alpha||\beta|} \beta \wedge \alpha$, and since both $\alpha$ and $\beta$ are $2$-forms, this gives us that $\alpha \wedge \beta = \beta \wedge \alpha$, so the bilinear form is certainly symmetric. For nondegeneracy. suppose $B(\alpha, \beta)$ is $0$ for all $\beta$. Then since $\omega$ is a volume form, this implies that the vectors $\lambda v_1 \wedge v_2 \wedge v_3 \wedge v_4$ determined by $\alpha \wedge \beta$ are linearly dependent, so $\lambda$ must be $0$ so $\alpha \wedge \beta = 0$ for all $\beta$, so $\alpha$ is necessarily $0$, so $B$ is nondegenerate, so it determines an inner product on $\bigwedge^2V$.
 %
 \begin{exer}
 Building upon the previous question, we can endow $V$ with the additional structure of a Hermitian inner product $\langle \cdot, \cdot \rangle$. We can then consider $\Aut(V, \omega, \langle \cdot,\cdot \rangle)$ is a subgroup of $\Aut(V, \omega)$. In addition, a map $T \in \Aut(V)$ induces a map $T_* \in \Aut(\bigwedge^2V)$, which gives a map $\Aut(V) \to \Aut(\bigwedge^2V)$. Identify the images of all the subgroups. 
 \end{exer}
+One thing to note here is that if a linear map $T : V \to V$ preserves $\omega$, then the induced map $T_* \bigwedge^2V \to \bigwedge^2V$ determined by $T_*(v \wedge w) = Tv \wedge Tw$ must necessarily preserve $B$. To see this, we note that after fixing a basis $v_1 \ldots v_4$ for $V$ such that $\omega(v_1, v_2, v_3, v_4) = 1$, this also gives us a basis for $\bigwedge^4V$, which we can use to compute the value of $B(\alpha,\beta)$ in coordinates. Then by checking on the basis for $\bigwedge^2V$ given by pairwise wedges $v_i \wedge v_j$, we have that 
+$$T_*(v_i \wedge v_j) \wedge T_*(v_k \wedge v_\ell) = Tv_i \wedge Tv_j \wedge Tv_k \wedge Tv_\ell $$
+which is just the determinant of $T$ multiplied by the wedge $v_i \wedge v_j \wedge v_k \wedge v_\ell$. Then since the determinant of $T$ is $1$ with respect to this basis, we have that 
+$$\omega(Tv_i, Tv_j, Tv_k, Tv_\ell) = \det T \omega (v_1, v_2, v_3, v_3) = \omega(v_12,v_2,v_3,v_4)$$
+So $T_*$ preserves $B$, giving us a homomorphism $\Aut(V, \omega) \to \Aut(\bigwedge^2V, B)$.
 %
 \end{document}
