--- a/SpinConference/SpinConference.tex
+++ b/SpinConference/SpinConference.tex
@@ -10,7 +10,7 @@
 \usepackage{mathrsfs}
 \usepackage{amsthm}
 \usepackage{mathpazo}
-\usepackage{eulervm}
+%\usepackage{eulervm}
 \usepackage{yfonts}
 \usepackage{enumitem}
 \usepackage{mathrsfs}
@@ -881,13 +881,89 @@ Show that $T_* = \id \iff T = \pm \id$
 We can then add the additional structure of a Hermitian inner product $\langle \cdot,\cdot \rangle : V \times V \to \C$. This induces an inner product on $\bigwedge^2V$, which by abuse of notation we also refer as $\langle \cdot,\cdot \rangle$, which is uniquely determined by 
 $$\langle v_i \wedge v_j, v_k \wedge v_l \rangle = \det \begin{pmatrix}
 \langle v_i, v_k \rangle & \langle v_i v_\ell \rangle \\
-\langle v_j v_k \rangle & \langle v_j, v_\ell \rangle
+\langle v_j, v_k \rangle & \langle v_j, v_\ell \rangle
 \end{pmatrix} $$
 %
 \begin{TODO}
-Show the induced inner product on $\bigwedge^2V$ is indeed an inner product
+Show the induced inner product on $\bigwedge^2V$ is indeed a Hermitian inner product
 \end{TODO}
-We note that if a linear map $T : V \to V$ preserves the inner product on $V$, then $T_*$ clearly must preserve the induced inner product on $\bigwedge^2 V$. In addition, if $T$ preserves $\omega$, it must preserve $B$ as well. We then note that after fixing an appropriate basis, we have that $\Aut(V,\omega, \langle \cdot,\cdot \rangle)$ is isomorphic to $SL_4(\C) \cap U(4) = SU_4(\C)$, and that the subgroup of linear maps $\bigwedge^2 V \to \bigwedge^2V$ that preserve $B$ and $\langle \cdot,\cdot \rangle$ is isomorphic to $SO_6\C) \cap U(6)$. We note that for a matrix $A$ to be in $SO_6(\C)$, we must have that $A^T = A\inv$, where $T$ is just the transpose, without any complex conjugation. The condition that $A \in U(6)$ then gives us hat $A^\dagger = A\inv$, where $\dagger$ denotes the conjugate transpose. Therefore, we must have that $A^T = A^\dagger = A\inv$. Therefore, all the elements of $A$ must be real so $A^T$ and $A^\dagger$ coincide, which gives us that $A \in SO(6, \R)$, so we now get a homomorphism $SU_4 \to SO_6(\R)$. We again get that kernel must be $\pm \id$, giving us the two fold covering $SU_4 \to SO_6(\R)$.
+We note that if a linear map $T : V \to V$ preserves the inner product on $V$, then $T_*$ clearly must preserve the induced inner product on $\bigwedge^2 V$. In addition, if $T$ preserves $\omega$, it must preserve $B$ as well. We then note that after fixing an appropriate basis, we have that $\Aut(V,\omega, \langle \cdot,\cdot \rangle)$ is isomorphic to $SL_4(\C) \cap U(4) = SU_4(\C)$, and that the subgroup of linear maps $\bigwedge^2 V \to \bigwedge^2V$ that preserve $B$ and $\langle \cdot,\cdot \rangle$ is isomorphic to $SO_6\C) \cap U(6)$. We note that for a matrix $A$ to be in $SO_6(\C)$, we must have that $A^T = A\inv$, where $T$ is just the transpose, without any complex conjugation. The condition that $A \in U(6)$ then gives us hat $A^\dagger = A\inv$, where $\dagger$ denotes the conjugate transpose. Therefore, we must have that $A^T = A^\dagger = A\inv$. Therefore, all the elements of $A$ must be real so $A^T$ and $A^\dagger$ coincide, which gives us that $A \in SO(6, \R)$, so we now get a homomorphism $SU_4 \to SO_6(\R)$. We again get that kernel must be $\pm \id$, giving us the two-fold covering $SU_4 \to SO_6(\R)$.
 %
+\setcounter{section}{10}
+%
+\setcounter{thm}{0}
+%
+\section*{Week 10}
+%
+\begin{exer}
+From last week, we got a functor from the subcategory $\mathscr{R}$ of $\mathsf{Vect}_\R$ where the objects are just $\R^n$ for $n \geq 0$ to the category of modules $ _{\End(V)}\mathsf{Mod}$. In addition, there is an equivalence of categories $\mathscr{R} \to \mathsf{Vect}_\R$ (think about this). Give a more natural functor from $\mathsf{Vect}_\R  \to  _{\End(V)}\mathsf{Mod}$ than just taking the inverse functor to $\mathscr{R}$. More concretely, given an arbitrary vector space $W$, give a natural construction of an $\End(V)$-module from $W$.
+\end{exer}
+%
+\begin{exer}
+Last week, we gave two-fold covers $SL_4(\C) \to SO_6(\C)$ and $SU(4) \to SO_6(\R)$. Since these are covers, they are local diffeomorphisms. Find the induced maps of Lie algebras, and check that they are isomorphisms.
+\end{exer}
+%
+\begin{exer}
+Show that in a connected Lie group $G$ any discrete normal subgroup $N$ is necessarily central, i.e. $N \subset Z(G)$.
+\end{exer}
+%
+\begin{exer}
+We're going to change up the notation a bit to fit more with convention. Again let $V$ be a $4$-dimensional complex vector space, and fix a volume form $\mu \in \bigwedge^4V^*$. Then let $\omega \in \bigwedge^2V^*$ be a skew-symmetric form where $\omega \wedge \omega = 2\mu$. Show that this implies that $\omega$ is nondegenerate.
+\end{exer}
+We first fix a basis $e_i$ for $V$, which induces a dual basis $e^i$. Then we can write
+$$\omega = \omega_{ij}e^i \wedge e^j $$
+where $i < j$. Then we compute
+\begin{align*}
+\omega \wedge \omega &= (\omega_{ij} e^i \wedge e^j) \wedge (\omega_{k\ell} e^k \wedge e^\ell) \\
+&= \omega_{ij}\omega_{k\ell} e^i \wedge e^j \wedge e^k \wedge e^\ell
+\end{align*}
+where $i < j$ and $k < \ell$. This is then equal to
+$$\omega \wedge \omega = \omega_{12}\omega_{34} e^1\wedge e^2 \wedge e^3 \wedge e^4  + \omega_{13}\omega_{24} e^1 \wedge e^3 \wedge e^2 \wedge e^4  + \omega_{14}\omega_{23} e^1 \wedge e^4 \wedge e^2 \wedge e^3$$
+which simplifies to
+$$\omega \wedge \omega = (2\omega_{12}\omega_{34} - 2\omega_{13}\omega_{24} + 2\omega_{14}\omega_{23}) e^1 \wedge e^2 \wedge e^3 \wedge e^4 = 2\mu $$
+By abuse of notation, we let $\omega_{ij}$ also define the matrix for $\omega$ with respect to the $e_i$, i.e $\omega_{ij} = \omega(e_i,e_j)$. We note that this implies that $\omega_{ij}$is skew-symmetric. We then compute that the coefficient for $\mu$ squares to
+$$(\omega_{12}\omega_{34} - \omega_{13}\omega_{24} + \omega_{14}\omega_{23})^2 = \omega_{12}^2\omega_{34}^2 + \omega_{13}^2\omega_{24}^2 + \omega_{14}^2\omega_{23}^2 + 2\omega_{12}\omega_{34}\omega_{14}\omega_{23} - 2\omega_{12}\omega_{34}\omega_{13}\omega_{24} - 2\omega_{13}\omega_{23}\omega_{14}\omega_{24}$$
+Where we use the skew-symmetry $\omega_{ij} = - \omega_{ji}$. Then when using the Leibniz formula to compute the determinant of $\omega_{ij}$, we get that any permutation $\sigma \in S_4$ contributes $0$ to the sum, since it will have $\omega_{kk} = 0$ in the product. Therefore, the only permutations that contribute to the sum are
+\begin{align*}
+&(1234) &&(1243) &&&(1324) \\
+&(1342) &&(1423) &&&(1432) \\
+&(12)(34) &&(13)(24) &&&(14)(23) 
+\end{align*}
+Expanding out these products and using skew-symmetry of $\omega_{ij}$, we find that this is exactly the square of the coefficient of $\mu$, so this gives us that $\omega \wedge \omega$ is a volume form iff $\omega$ is nondegenerate.
+%
+\begin{exer}
+Following on the previous question, we now have a subgroup $\Aut(V, \omega) \subset \Aut(V, \mu)$. From before, we've gotten maps $\Aut(V, \mu) \to \Aut(\bigwedge^2V, B)$, where $B$ is the bilinear from we got from $\omega$. Identify the subgroup $G$ that is the image of $\Aut(V, \omega)$ under this map. After fixing a basis, identify $G$ as a matrix group.
+\end{exer}
+We have that $\omega$ induces a bilinear form $\tilde{\omega}$ on $\bigwedge^2V$ (just like the Hermitian form last week), where we define on a basis $e_i$ 
+$$\tilde{\omega}(v_i \wedge v_j, v_k) \wedge v_\ell = \det\begin{pmatrix}
+\omega(v_i,v_k) & \omega(v_i,v_\ell) \\
+\omega(v_j,v_k) & \omega(v_k, v_\ell)
+\end{pmatrix} $$
+However, this has the unexpected property of being symmetric, rather than skew symmetric like $\omega$ was. To see this, we compute
+\begin{align*}
+\tilde{\omega}(v_k \wedge v_\ell, v_i \wedge v_j) &= \det\begin{pmatrix}
+\omega(v_k, v_i) & \omega(v_k, v_j) \\
+\omega(v_\ell, v_i) & \omega(v_\ell, v_j)
+\end{pmatrix} \\
+&= \det\begin{pmatrix}
+-\omega(v_i, v_k) & -\omega(v_j, v_k) \\
+-\omega(v_i, v_\ell) & -\omega(v_j, v_\ell)
+\end{pmatrix}
+&= \tilde{\omega}(v_i \wedge v_j, v_k \wedge v_\ell)
+\end{align*}
+where the last equality comes from observing that we are taking the determinant of the negative transpose, and since multiplying an even number of rows by $-1$ scales the determinant by $(1)^4$ from the multilinearity of $\det$. In addition, a linear map $T \in \Aut(V,\omega)$ certainly satisfies that $T_* \in \Aut(\bigwedge^2V, \tilde{\omega}, B)$, so we need it to simultaneously preserve two bilinear forms.
+%
+\begin{exer}
+Again expanding on the previous problem, there are several things to consider
+\begin{enumerate}
+\item Identify the image of the group $\Aut(V,\omega, \langle \cdot,\cdot \rangle)$, where $\langle \cdot, \cdot \rangle$ is a Hermitian inner product
+\item Consider the case where $\langle \cdot,\cdot \rangle$ need not be positive definite, what about the mixed signatures $(3,1)$ and $(2,2)$?
+\item What if we had done all of this in an $\R$-vector space rather than over $\C$?
+\end{enumerate}
+\end{exer}
+%
+\begin{exer}
+With $V$ as above, we can also endow $V$ with additional structure by giving the data of an antilinear map $J : V \to V$ where $J^2 = \id_V$. In particular, $J$ fixes some subspace of $V$, and we can consider maps $T : V \to V$ that fix this subspace. Identify this group. Another choice is an antilinear map $J : V \to V$ where $J^2 = \id_V$. This gives us a quaternionic structure on $V$, and we can ask for maps that preserve this quaternionic structure. Find this group.
+\end{exer}
 %
 \end{document}
