--- a/CliffordAlgebras/CliffordAlgebras.tex
+++ b/CliffordAlgebras/CliffordAlgebras.tex
@@ -20,6 +20,7 @@
 \usepackage{thmtools}
 \usepackage{tikz}
 \usepackage{tikz-cd}
+\usepackage{mathpazo}
 
 \usetikzlibrary{matrix, calc, arrows}
 
@@ -47,8 +48,12 @@
 \DeclareMathOperator{\id}{id}
 
 \begin{document}
+\title{Clifford Algebras}
+\author{Jeffrey Jiang}
+\date{}
+\maketitle
 %
-An important group in mathematics is the \textbf{orthogonal group}, which describes the linear transformations $\R^n \to \R^n$ that preserve the standard inner product, where given $v,w \in \R^n$, with components $v^i$ and $v^i$ with respect to the standard basis $\{e_i\}$ we have that
+An important group in mathematics is the \textbf{orthogonal group}, which describes the linear transformations $\R^n \to \R^n$ that preserve the standard inner product $\langle \cdot, \cdot \rangle$, where given $v,w \in \R^n$, with components $v^i$ and $v^i$ with respect to the standard basis $\{e_i\}$ we $\langle v,w \rangle$ is given by
 $$\langle v,w \rangle  = \sum_i v^iw^i $$
 The inner product induces a norm, where $|v| = \langle v,v \rangle$, which introduces a notion of length in $\R^n$. In addition, we now have a notion of the angle between two vectors, where given two vectors $v,w \in \R^n$, we can define the angle $\theta$ between them to be
 $$\theta = \arccos\left( \frac{|\langle v,w \rangle|}{|v| |w|} \right) $$
